Fixed text alignment

--- a/interactions/interactions.css
+++ b/interactions/interactions.css
@@ -113,6 +113,7 @@ td {
     background-position: center center;
     margin:0; /* If you want no margin */
     padding:0; /*if your want to padding */
+    text-align: center;
 }
 
 #scheduler-arrow {
